--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="css/index.css">
 <head>
-  <title>My Website</title>
+  <title>Ironic's Storage</title>
 </head>
 <body>
-  <h1>Hello World</h1>
-  <p>This site is hosted on GitHub Pages.</p>
+  <h1>Ironic's Wiki</h1>
+  <div class="buttons">
+    <button onclick="location.href='total-war/'">Total War</button>
+    <button onclick="location.href='foundry/'">FoundryVTT</button>
+  </div>
 </body>
+
 </html>
