--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="css/index.css">
+<link rel="stylesheet" href="styles/index.css">
 <head>
   <title>Ironic's Storage</title>
 </head>
