--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Ironic's Wiki</h1>
   <div class="buttons">
-    <button onclick="location.href='total-war/index.html'">Total War</button>
+    <button onclick="location.href='total_war/index.html'">Total War</button>
     <button onclick="location.href='foundry/index.html'">FoundryVTT</button>
   </div>
 </body>
