updated some text

--- a/total_war/factions.html
+++ b/total_war/factions.html
@@ -127,8 +127,8 @@
                     <p class="faction-leader">Governor of Xu</p>
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
-                <article class="faction-card" data-type="han">
-                    <h3 class="faction-name">Zhang Lu</h3>
+                <article class="faction-card" data-type="han" data-loc-key="zhang_lu">
+                    <h3 class="faction-name" data-loc-key="zhang_lu">Zhang Lu</h3>
                     <p class="faction-leader">The Celestial Master</p>
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
@@ -298,8 +298,8 @@
                     <p class="faction-leader">Scholar Official</p>
                     <div class="faction-tags"><span class="faction-tag dlc">DLC</span></div>
                 </article>
-                <article class="faction-card" data-type="bandit">
-                    <h3 class="faction-name">Liang Rebels</h3>
+                <article class="faction-card" data-type="han">
+                    <h3 class="faction-name">Song Jian</h3>
                     <p class="faction-leader">Western Insurgents</p>
                     <div class="faction-tags"><span class="faction-tag dlc">DLC</span></div>
                 </article>
@@ -317,27 +317,27 @@
             </div>
             <div class="faction-grid">
                 <article class="faction-card" data-type="yellow-turban">
-                    <h3 class="faction-name">Yellow Turban Rebels</h3>
+                    <h3 class="faction-name">He Yi</h3>
                     <p class="faction-leader">The Way of Peace</p>
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
                 <article class="faction-card" data-type="yellow-turban">
-                    <h3 class="faction-name">Taishan Yellow Turbans</h3>
+                    <h3 class="faction-name">Huang Shao</h3>
                     <p class="faction-leader">Mountain Zealots</p>
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
                 <article class="faction-card" data-type="yellow-turban">
-                    <h3 class="faction-name">Anding Yellow Turbans</h3>
+                    <h3 class="faction-name">Gong Du</h3>
                     <p class="faction-leader">Western Believers</p>
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
                 <article class="faction-card" data-type="yellow-turban">
-                    <h3 class="faction-name">Generic Yellow Turbans</h3>
+                    <h3 class="faction-name">Liu Pi</h3>
                     <p class="faction-leader">Scattered Faithful</p>
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
                 <article class="faction-card" data-type="yellow-turban">
-                    <h3 class="faction-name">Yellow Turban Wuhuan</h3>
+                    <h3 class="faction-name">Wu Huan</h3>
                     <p class="faction-leader">Nomadic Converts</p>
                     <div class="faction-tags"><span class="faction-tag modded">190 Expanded</span></div>
                 </article>
