--- a/total_war/factions.html
+++ b/total_war/factions.html
@@ -95,7 +95,7 @@
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
                 <article class="faction-card" data-type="han">
-                    <h3 class="faction-name">Liu Yan</h3>
+                    <h3 class="faction-name" data-loc-key="ceo_nodes_title_3k_main_ceo_node_career_historical_liu_yan_01">Liu Yan</h3>
                     <p class="faction-leader">Governor of Yi</p>
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
