--- a/total_war/factions.html
+++ b/total_war/factions.html
@@ -274,7 +274,7 @@
             </div>
             <div class="faction-grid">
                 <article class="faction-card" data-type="han">
-                    <h3 class="faction-name">Prince Liu Chong</h3>
+                    <h3 class="faction-name">Liu Chong</h3>
                     <p class="faction-leader">Prince of Chenliu</p>
                     <div class="faction-tags"><span class="faction-tag dlc">DLC</span></div>
                 </article>
@@ -284,7 +284,7 @@
                     <div class="faction-tags"><span class="faction-tag dlc">DLC</span></div>
                 </article>
                 <article class="faction-card" data-type="han">
-                    <h3 class="faction-name">Lü Kang</h3>
+                    <h3 class="faction-name">Lu Kang</h3>
                     <p class="faction-leader">General of Lü Bu</p>
                     <div class="faction-tags"><span class="faction-tag dlc">DLC</span></div>
                 </article>
@@ -365,7 +365,7 @@
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
                 <article class="faction-card" data-type="bandit">
-                    <h3 class="faction-name">Zhai Rong</h3>
+                    <h3 class="faction-name">Ze Rong</h3>
                     <p class="faction-leader">Buddhist Warlord</p>
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
@@ -458,7 +458,7 @@
                     <div class="faction-tags"><span class="faction-tag dlc">DLC</span></div>
                 </article>
                 <article class="faction-card" data-type="nanman">
-                    <h3 class="faction-name">Jiuzhen</h3>
+                    <h3 class="faction-name">Qu Pan</h3>
                     <p class="faction-leader">Southern Commander</p>
                     <div class="faction-tags"><span class="faction-tag dlc">DLC</span></div>
                 </article>
@@ -476,7 +476,7 @@
             </div>
             <div class="faction-grid">
                 <article class="faction-card" data-type="nanman">
-                    <h3 class="faction-name">Shanyue Rebels</h3>
+                    <h3 class="faction-name">Pan Lin</h3>
                     <p class="faction-leader">Mountain Yue Tribes</p>
                     <div class="faction-tags"><span class="faction-tag dlc">DLC</span></div>
                 </article>
@@ -486,17 +486,17 @@
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
                 <article class="faction-card" data-type="han">
-                    <h3 class="faction-name">Nanhai</h3>
+                    <h3 class="faction-name">Ni Xiaoode</h3>
                     <p class="faction-leader">Southern Commandery</p>
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
                 <article class="faction-card" data-type="han">
-                    <h3 class="faction-name">Yulin</h3>
+                    <h3 class="faction-name">Wu Ju</h3>
                     <p class="faction-leader">Frontier Garrison</p>
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
                 <article class="faction-card" data-type="han">
-                    <h3 class="faction-name">Gaoliang</h3>
+                    <h3 class="faction-name">Lai Gong</h3>
                     <p class="faction-leader">Southern Settlement</p>
                     <div class="faction-tags"><span class="faction-tag">Vanilla</span></div>
                 </article>
@@ -514,27 +514,27 @@
             </div>
             <div class="faction-grid">
                 <article class="faction-card" data-type="nomad">
-                    <h3 class="faction-name">Xianbei - Kuitou</h3>
+                    <h3 class="faction-name">Kuitou</h3>
                     <p class="faction-leader">Xianbei Chanyu</p>
                     <div class="faction-tags"><span class="faction-tag modded">190 Expanded</span></div>
                 </article>
                 <article class="faction-card" data-type="nomad">
-                    <h3 class="faction-name">Xianbei - Tuoba</h3>
+                    <h3 class="faction-name">Tuoba Jiefan</h3>
                     <p class="faction-leader">Tuoba Clan</p>
                     <div class="faction-tags"><span class="faction-tag modded">190 Expanded</span></div>
                 </article>
                 <article class="faction-card" data-type="nomad">
-                    <h3 class="faction-name">Wuhuan Tribes</h3>
+                    <h3 class="faction-name">Qiulijiu</h3>
                     <p class="faction-leader">Eastern Nomads</p>
                     <div class="faction-tags"><span class="faction-tag modded">190 Expanded</span></div>
                 </article>
                 <article class="faction-card" data-type="nomad">
-                    <h3 class="faction-name">Xiongnu Tribes</h3>
+                    <h3 class="faction-name">Yufuluo</h3>
                     <p class="faction-leader">The Great Horde</p>
                     <div class="faction-tags"><span class="faction-tag modded">190 Expanded</span></div>
                 </article>
                 <article class="faction-card" data-type="nomad">
-                    <h3 class="faction-name">Di Tribes</h3>
+                    <h3 class="faction-name">Dou Mao</h3>
                     <p class="faction-leader">Northwestern Peoples</p>
                     <div class="faction-tags"><span class="faction-tag modded">190 Expanded</span></div>
                 </article>
@@ -554,7 +554,7 @@
                     <div class="faction-tags"><span class="faction-tag modded">190 Expanded</span></div>
                 </article>
                 <article class="faction-card" data-type="nomad">
-                    <h3 class="faction-name">Zhang Jin (Border)</h3>
+                    <h3 class="faction-name">Handan Shang</h3>
                     <p class="faction-leader">Frontier Commander</p>
                     <div class="faction-tags"><span class="faction-tag modded">190 Expanded</span></div>
                 </article>
@@ -675,7 +675,7 @@
                     <div class="faction-tags"><span class="faction-tag modded">190 Expanded</span></div>
                 </article>
                 <article class="faction-card" data-type="han">
-                    <h3 class="faction-name">Huang Clan</h3>
+                    <h3 class="faction-name">Huang Ang</h3>
                     <p class="faction-leader">Noble Family</p>
                     <div class="faction-tags"><span class="faction-tag modded">190 Expanded</span></div>
                 </article>
