--- a/total_war/index.html
+++ b/total_war/index.html
@@ -61,7 +61,7 @@
     </main>
 
     <footer>
-        <p>Created by Ironic · <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=YOUR_MOD_ID">Steam Workshop</a></p>
+        <p>Created by Ironic · <a href="https://steamcommunity.com/id/ironictw2st/myworkshopfiles/?appid=779340">Steam Workshop</a></p>
     </footer>
 </body>
 </html>
