--- a/total_war/index.html
+++ b/total_war/index.html
@@ -32,9 +32,9 @@
                 <h2>Characters</h2>
                 <p>Heroes, strategists, and warriors of the Three Kingdoms era</p>
             </a>
-            <a href="mechanics.html" class="wiki-card">
+            <a href="guides.html" class="wiki-card">
                 <div class="card-icon">法</div>
-                <h2>Mechanics</h2>
+                <h2>Guides</h2>
                 <p>New systems, events, and gameplay features</p>
             </a>
             <a href="changelog.html" class="wiki-card">
