--- a/total_war/factions.html
+++ b/total_war/factions.html
@@ -24,7 +24,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="factions.html" class="active">Factions</a></li>
             <li><a href="characters.html">Characters</a></li>
-            <li><a href="mechanics.html">Mechanics</a></li>
+            <li><a href="guides.html">Guides</a></li>
             <li><a href="changelog.html">Changelog</a></li>
         </ul>
     </nav>
