Fixed family tree issues

--- a/total_war/characters.html
+++ b/total_war/characters.html
@@ -746,7 +746,7 @@
                     </div>
                     ${char.courtesy_name ? `
                         <p class="character-courtesy">
-                            <span class="character-courtesy-label">字:</span>
+                            <span class="character-courtesy-label">Courtesy:</span>
                             ${escapeHtml(char.courtesy_name)}
                             ${char.courtesy_name_alt ? ` ${escapeHtml(char.courtesy_name_alt)}` : ''}
                         </p>
